<resources>
    <string name="app_name">Mi Casa Es Tu Casa</string>
    <string name="home">Home</string>
    <string name="cerca">Cerca</string>
    <string name="Pubblica">Pubblica</string>
    <string name="chat">Chat</string>
    <string name="profilo">Profilo</string>
    <string name="Preferiti">Preferiti</string>
    <string name="giardino">Giardino</string>
    <string name="annunci_case">Annunci case</string>
    <string name="content_description_logo">logo</string>
    <string name="Presentazione_app">Ogni casa racconta una storia</string>
    <string name="presentazione_app2">Trova un luogo speciale o condividi il tuo spazio con altre persone.</string>
    <string name="cosa_vuoi_fare">Cosa vuoi fare?</string>
    <string name="cerca_un_alloggio">Cerca un alloggio</string>
    <string name="condividi_un_alloggio">Condividi la tua casa!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="frase_registrazione">Non hai un account? Registrati Ora!</string>
    <string name="login">Login\n</string>
    <string name="mi_casa_es_tu_casa">Mi casa es tu casa</string>
    <string name="trova_il_posto_perfetto_o_condividi_il_tuo_spazio">Trova il posto perfetto o condividi il tuo spazio</string>
    <string name="pubblica_casa">Pubblica casa</string>
    <string name="gli_annunci_pi_interessanti_sono_qui">Gli annunci più interessanti sono qui</string>
    <string name="case_consigliate">Case consigliate</string>
    <string name="cerca_casa">Cerca casa</string>
    <string name="ogni_viaggio_comincia_aprendo_una_porta">Ogni viaggio comincia aprendo una porta.</string>
    <string name="dove_vuoi_andare">Dove vuoi andare?</string>
    <string name="citt_regione_o_paese">Città, regione o paese</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="casa">Casa</string>
    <string name="appartamento">Appartamento</string>
    <string name="Stanza">Stanza</string>
    <string name="apri_la_porta_a_nuovi_viaggiatori_e_condividi_un_luogo_pieno_di_ricordi">Apri la porta a nuovi viaggiatori e condividi un luogo pieno di ricordi.</string>
    <string name="hai_una_casa_speciale">Hai una casa speciale?</string>
    <string name="vedi_tutto">Vedi tutto</string>
    <string name="trova_un_luogo_speciale_dove_sentirti_davvero_a_casa">Trova un luogo speciale dove sentirti davvero a casa.</string>
    <string name="esplora">Esplora</string>
    <string name="destinazioni_da_sogno">Destinazioni da sogno</string>
    <string name="Pubblica_un_alloggio">Pubblica un alloggio</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="content_description_persona">Immagine profilo utente</string>
    <string name="_18_42">18:42</string>
    <string name="segnaposto">Segnaposto</string>
    <string name="content_description_invio">Icona_invio_messaggio</string>
    <string name="invia_messaggio">Scrivi un messaggio…\n</string>
    <string name="allega_immagine">allega immagine</string>
    <string name="scrivi_messaggio">Scrivi un messaggio…</string>
    <string name="immagine_copertina_casa">Immagine di copertina della casa</string>
    <string name="esempio">PROVA</string>
    <string name="bottone_preferiti">Bottone per aggiungere la casa ai preferiti</string>
    <string name="posizione_casa">Città dove si trova la casa</string>
    <string name="content_description_valutazione">Valutazione in stelle</string>
    <string name="content_description_ospiti">Numero di ospiti</string>
    <string name="content_description_camere">Numero di camere</string>
    <string name="empty_favorites">Aggiungi le case che ti interessano per ritrovarle qui</string>
    <string name="registrazione">Registrazione</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="email">Inserisci la tua email</string>
    <string name="conferma_password">Conferma la password</string>
    <string name="hai_gia_un_account">Hai già un Account? <u>Torna al login</u></string>
    <string name="registrati">Registrati</string>
    <string name="bottone_ricerca">Bottone per effettuare la ricerca</string>
    <string name="logout">Logout</string>
    <string name="foto_profilo">Foto del profilo</string>
    <string name="nome_utente">Nome Utente</string>
    <string name="modifica_profilo">Modifica il tuo profilo</string>
    <string name="account">Account</string>
    <string name="i_tuoi_annunci">I tuoi annunci</string>
    <string name="le_tue_prenotazioni">Le tue prenotazioni</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="notifiche">Notifiche</string>
    <string name="aspetto">Aspetto</string>
    <string name="privacy">Privacy</string>
    <string name="sistema">Sistema</string>
    <string name="scuro">Scuro</string>
    <string name="chiaro">Chiaro</string>
    <string name="tema">Tema</string>
    <string name="le_tue_attivit">Le tue attività</string>
    <string name="attivit">Attività</string>
    <string name="my_activities">Le mie attività</string>
    <string name="modifica">Modifica</string>
    <string name="elimina">Elimina</string>
    <string name="bottone_modifica">Bottone per modificare</string>
    <string name="accetta">Accetta</string>
    <string name="rifiuta">Rifiuta</string>
    <string name="c_des_tablayout">Selezionare destra ospite, sinistra proprietario</string>
    <string name="nessuna_prenotazione">Nessuna prenotazione</string>
    <string name="prenotazioni_ricevute">Prenotazioni ricevute</string>
    <string name="des_photo">Bottone per aprire fotocamera o inserire foto</string>
    <string name="immagine_allegata">Immagine allegata</string>
    <string name="prenota">Prenota</string>
    <string name="contatta_proprietario">Contatta il proprietario</string>
    <string name="recensioni">Recensioni</string>
    <string name="posizione">Posizione</string>
    <string name="descrizione">Descrizione</string>
    <string name="servizi">Servizi</string>
    <string name="ospitato_da">Ospitato da</string>
    <string name="termini_e_condizioni">Termini e condizioni</string>
    <string name="elimina_account">Elimina account</string>
    <string name="gestisci_le_impostazioni_del_tuo_account">Gestisci le impostazioni del tuo account</string>
    <string name="search_results">Risultati</string>
    <string name="select_dates">Seleziona le date</string>
    <string name="select_guests">Seleziona il numero di persone</string>
    <string name="number_of_beds">Seleziona il numero di letti</string>
    <string name="house_type">Seleziona il tipo di casa</string>
    <string name="foto">Foto</string>
    <string name="pubblica_annuncio">Pubblica annuncio</string>
    <string name="seleziona_disponibilita">Seleziona dispobilità</string>
    <string name="disponibilita">Disponibilità</string>
    <string name="elimina_foto">Elimina la foto</string>
    <string name="aggiungi_foto">Aggiungi foto</string>
    <string name="informazioni">Informazioni</string>
    <string name="titolo">Titolo</string>
    <string name="bagni">Numero bagni</string>
    <string name="letti">Numero letti</string>
    <string name="camere">Numero stanze</string>
    <string name="ospiti">Numero persone</string>
    <string name="caratteristiche">Caratteristiche</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="prezzo_a_notte">Prezzo a notte</string>
    <string name="tipologia">Tipologia</string>
    <string name="check_in">Check-in</string>
    <string name="select_date">Seleziona data</string>
    <string name="check_out">Check-out</string>
    <string name="cancel_booking">Cancella prenotazione</string>
    <string name="confirm_booking">Conferma prenotazione</string>
    <string name="total_price">Totale</string>
    <string name="number_of_nights">Numero notti</string>
    <string name="booking_summary">Riassunto prenotazione</string>
    <string name="guests">Ospiti</string>
    <string name="user_bio">Bio</string>
    <string name="user_badges">Badge</string>
    <string name="report_user">Segnala l\'utente</string>
    <string name="contact_user">Contatta l\'utente</string>
    <string name="show_all_reviews">Mostra tutte le recensioni</string>
    <string name="house_tags">Tags</string>
    <string name="notifications_description">Bottone notifiche</string>
    <string name="report_reason">Perché vuoi segnalare questo utente?</string>
    <string name="report_spam">Spam</string>
    <string name="report_scam">Truffa</string>
    <string name="report_offensive">Contenuti offensivi</string>
    <string name="report_other">Altro</string>
    <string name="description">Descrizione</string>
    <string name="showALlReviews">Mostra tutte le recensioni</string>
    <string name="showLessReviews">Mostra meno recensioni</string>
    <string name="salva_modifiche">Salva modifiche</string>
    <string name="cambia_foto">Cambia foto</string>
    <string name="regole">Regole</string>
    <string name="chiudi">Chiudi</string>
    <string name="esperienza">Esperienza</string>
    <string name="aggiungi_periodo">Aggiungi periodo</string>
    <string name="citta">Città</string>
    <string name="seleziona_sulla_mappa">Seleziona sulla mappa</string>
    <string name="no_recensioni">Ancora nessuna recensione</string>
    <string name="proprietario">Proprietario</string>
    <string name="detailed_house_prezzo_notte">%1$.2f €/notte</string>
    <string name="detailed_house_tipo">Tipo: %1$s</string>
    <string name="_detailed_house_ospiti_massimi">Ospiti massimi: %1$d</string>
    <string name="detailed_house_camereNumero">Camere: %1$d</string>
    <string name="detailed_house_bagni">Bagni: %1$d</string>
    <string name="nessuna_casa_trovata">Nessuna casa trovata</string>
    <string name="nome_cognome_user">%1$s %2$s</string>
    <string name="nessuna_biografia">Nessuna biografia</string>
    <string name="rating_num_rec">%1$.2f (%2$d recensioni)</string>
    <string name="num_soggiorni_annunci">%1$d soggiorni • %2$d annunci</string>
    <string name="detailed_house_rating">%1$.1f</string>
    <string name="no_results">Nessun risultato</string>
    <string name="clear">Elimina filtri</string>
    <string name="filters">Filtri</string>
    <string name="all_house_types">Tutti i tipi di casa</string>
    <string name="decrease_guests">Riduci il numero di persone</string>
    <string name="advanced_filters">Filtri avanzati</string>
    <string name="decrease_beds">Riduci il numero di letti</string>
    <string name="increase_beds">Incrementa il numero di letti</string>
    <string name="increase_guests">Incrementa il numero di persone</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="apri_prenotazione">Apri prenotazione</string>
    <string name="number_of_bathrooms">Numero di bagni</string>
    <string name="_1000">1000€</string>
    <string name="lascia_una_recensione">lascia una recensione</string>
    <string name="statistiche">Statistiche</string>
    <string name="utenti">Utenti</string>
    <string name="label_telefono">Numero di telefono</string>
    <string name="zero_euro">0€</string>
    <string name="mille_euro">1000€</string>
    <string name="nessun_risultato">Nessun risultato</string>
    <string name="booking_title">Prenotazione</string>
    <string name="booking_status">Stato: %s</string>
    <string name="segnala_chat">Segnala utente</string>
    <string name="elimina_chat">Elimina chat</string>
</resources>