<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/aspetto"

        android:textSize="22sp"
        android:textStyle="bold"

        android:textColor="?attr/colorOnSurface"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:text="@string/tema"

        android:textSize="18sp"

        android:textColor="?attr/colorOnSurface"/>

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="320dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp">

        <RadioButton
            android:id="@+id/radioLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/chiaro"
            android:textColor="?attr/colorOnSurface"/>


        <RadioButton
            android:id="@+id/radioDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/scuro"
            android:textColor="?attr/colorOnSurface"/>


        <RadioButton
            android:id="@+id/radioSystem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/sistema"
            android:textColor="?attr/colorOnSurface"/>
    </RadioGroup>
</LinearLayout>