<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <include
            android:id="@+id/housePreview"
            layout="@layout/item_house"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <!-- DATE -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dateCard"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="24dp"

            android:clickable="true"
            android:focusable="true"

            app:cardCornerRadius="20dp"

            app:layout_constraintTop_toBottomOf="@id/housePreview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_in"/>

                    <TextView
                        android:id="@+id/checkInDate"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"

                        android:text="@string/select_date"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"

                    android:layout_marginHorizontal="12dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_out"/>

                    <TextView
                        android:id="@+id/checkOutDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/select_date"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- GUESTS -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/guestsCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:clickable="true"
            android:focusable="true"

            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/dateCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guests"/>


                    <TextView
                        android:id="@+id/guestsNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/select_guests"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@null"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <!-- SUMMARY -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/summaryCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/guestsCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/booking_summary"/>

                <TextView
                    android:id="@+id/nightsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/number_of_nights"/>

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/total_price"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- ACTION -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/bookingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/confirm_booking"
            app:cornerRadius="18dp"
            app:layout_constraintTop_toBottomOf="@id/summaryCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBookingButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cancel_booking"
            app:layout_constraintTop_toBottomOf="@id/bookingButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>