<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <include
            android:id="@+id/profileInfo"
            layout="@layout/item_user"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <HorizontalScrollView
            android:id="@+id/chipScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/profileInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/badges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true" />

        </HorizontalScrollView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bioTitle"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"

            android:text="@string/user_bio"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@id/chipScrollView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userBio"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"

            android:text="@string/segnaposto"

            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"

            app:layout_constraintTop_toBottomOf="@id/bioTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/reviewsCard"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"

            app:layout_constraintTop_toBottomOf="@id/userBio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:padding="16dp">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/reviewsTitle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/recensioni"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviewsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:nestedScrollingEnabled="false" />

                <TextView
                    android:id="@+id/tvNoReviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_recensioni"
                    android:gravity="center"
                    android:padding="16dp"
                    android:visibility="gone" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/showAllReviewsButton"

                    android:layout_width="280dp"
                    android:layout_height="wrap_content"

                    android:text="@string/show_all_reviews" />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/contactButton"

            android:layout_width="160dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:text="@string/contact_user"

            app:layout_constraintTop_toBottomOf="@id/reviewsCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/reportButton"

            android:layout_width="160dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"

            android:text="@string/report_user"
            android:backgroundTint="@color/error_Red"

            app:layout_constraintTop_toBottomOf="@id/contactButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>