<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingHorizontal="12dp"
    android:paddingVertical="6dp">


    <!-- bubble messaggio -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardMessage"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="?attr/colorSecondary"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/immagine_allegata"

                android:visibility = "gone"
                >

            </ImageView>

            <!--testp-->
            <TextView
                android:id="@+id/tvMessage"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:maxWidth="260dp"

                android:padding="14dp"

                android:text="@string/segnaposto"

                android:textColor="?attr/colorOnBackground"

                android:textSize="15sp"/>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <!-- Ora + stato -->

    <LinearLayout
        android:id="@+id/layoutStatus"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"

        android:gravity="center_vertical"

        android:layout_marginTop="4dp"

        app:layout_constraintTop_toBottomOf="@id/cardMessage"
        app:layout_constraintEnd_toEndOf="@id/cardMessage">


        <TextView
            android:id="@+id/tvTime"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/_18_42"

            android:textColor="?attr/colorOnSurfaceVariant"

            android:textSize="11sp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>